deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friendztravel
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friendztravel
  template:
    metadata:
      labels:
        app: friendztravel
    spec:
      containers:
      - name: friendztravel
        image: ujjawaltgs/friendztravel:latest
        ports:
        - containerPort: 8080
