complytax-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: complytax-service
spec:
  selector:
    app: complytax
  ports:
    - port: 80
      targetPort: 9090
  type: NodePort
