flyograb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flyograb-service
spec:
  selector:
    app: flyograb
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
